Iframe accessible bounding boxes should include border,padding.

We store accessible bounding boxes as relative coordinates, and
normally each element takes its parent's border and padding into
account when exposing its own top/left coordinate. This doesn't
work for the root document node inside an iframe, because it
can't know the owning iframe element's border and padding, so
we need a special case for that.

Bug: 740312
Change-Id: I4c7d7f435eff9c69afa889d666bd09a2dc5716ae
Reviewed-on: https://chromium-review.googlesource.com/775024
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518794}
Former-commit-id: ca8e25b9ac0ded66124c5d771cc4c8d4157b0d19